--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,4 +50,4 @@ importFrom(stats,qnorm)
 importFrom(stats,qt)
 importFrom(stats,rnorm)
 importFrom(utils,packageVersion)
-useDynLib(CovTools)
+useDynLib(CovTools, .registration=TRUE)
